Changed the styles of the tracker

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>True Tune designs</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> </head>
-
+    <link rel="stylesheet" href="style.css">
 <body>
     <style>
         /*ugly, consider better styles for vertical alligment*/
@@ -44,8 +44,8 @@
                         <button type="button" class="btn btn-default range-btn">00:06</button>
                         <div class="btn btn-default song-range range-btn">
                             <div class="text-center song-title">Foo Foghters - Album (2014) - Song name</div>
-                            <div>
-                                <input type="range" min="0" value="0" class="seek" max="198.844082" step="1.9884408199999999"> </div>
+                            <div class="tracker">
+                                <input  type="range" min="0" value="0" class="seek" max="198.844082" step="1.9884408199999999"> </div>
                         </div>
                         <button type="button" class="btn btn-default range-btn">-12:39</button>
                         <button type="button" class="btn btn-default glyphicon glyphicon-volume-up"></button>
