Make button visible only on hover on playlist

--- a/playlists.html
+++ b/playlists.html
@@ -22,22 +22,29 @@
                     </div>
                     <div class="list-group">
                         <a href="#" class="list-group-item">Link
-                            <p class="pull-right">
+                            <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove" data-toggle="offcanvas"></button>
                             </p>
-                            <p class="pull-right">
+                            <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit" data-toggle="offcanvas"></button>
                             </p>
                         </a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
-                        <a href="#" class="list-group-item">Link</a>
+                        <a href="#" class="list-group-item">Link
+                            <p class="pull-right playlist-btn">
+                                <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove" data-toggle="offcanvas"></button>
+                            </p>
+                            <p class="pull-right playlist-btn">
+                                <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit" data-toggle="offcanvas"></button>
+                            </p>
+                        </a>
+                        <a href="#" class="list-group-item">Link
+                            <p class="pull-right playlist-btn">
+                                <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove" data-toggle="offcanvas"></button>
+                            </p>
+                            <p class="pull-right playlist-btn">
+                                <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit" data-toggle="offcanvas"></button>
+                            </p>
+                        </a>
                     </div>
                 </div>
             </div>
