Minor refactorings and added some hiding buttons

--- a/playlists.html
+++ b/playlists.html
@@ -71,31 +71,26 @@
                     <!-- Default panel contents -->
                     <div class="panel-heading">Playlists
                         <p class="pull-right">
+                            <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-arrow-left" data-toggle="offcanvas"></button>
                             <button type="button" class="btn btn-primary btn-xs glyphicon glyphicon-plus" data-toggle="offcanvas"></button>
                         </p>
                     </div>
                     <div class="list-group">
-                        <a href="#" class="list-group-item">Link
+                        <a href="#" class="list-group-item">Metal
                             <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove" data-toggle="offcanvas"></button>
-                            </p>
-                            <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit" data-toggle="offcanvas"></button>
                             </p>
                         </a>
-                        <a href="#" class="list-group-item">Link
+                        <a href="#" class="list-group-item">Chill
                             <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove" data-toggle="offcanvas"></button>
-                            </p>
-                            <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit" data-toggle="offcanvas"></button>
                             </p>
                         </a>
-                        <a href="#" class="list-group-item">Link
+                        <a href="#" class="list-group-item">Music for work
                             <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove" data-toggle="offcanvas"></button>
-                            </p>
-                            <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit" data-toggle="offcanvas"></button>
                             </p>
                         </a>
