Added active flag as an example

--- a/playlists.html
+++ b/playlists.html
@@ -57,7 +57,7 @@
                         </p>
                     </div>
                     <div class="list-group">
-                        <a href="#" class="list-group-item">Metal
+                        <a href="#" class="list-group-item ">Metal
                             <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit"></button>
                                 <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove"></button>
@@ -69,7 +69,7 @@
                                 <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove"></button>
                             </p>
                         </a>
-                        <a href="#" class="list-group-item">Music for work
+                        <a href="#" class="list-group-item active">Music for work
                             <p class="pull-right playlist-btn">
                                 <button type="button" class="btn btn-default btn-xs glyphicon glyphicon-edit"></button>
                                 <button type="button" class="btn btn-default btn-xs btn-danger glyphicon glyphicon-remove"></button>
