Add a search link

--- a/playlists.html
+++ b/playlists.html
@@ -18,14 +18,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Brand</a>
+                <button id="hide-playlists" class="navbar-btn btn btn-default glyphicon glyphicon-arrow-left"></button>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Link</a></li>
+
+                    <li class="active"><a href="#">Search</a></li>
                 </ul>
-                <button id="hide-playlists" class="navbar-btn btn btn-default glyphicon glyphicon-arrow-left"></button>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Link</a></li>
                     <li class="dropdown">
